<resources>
    <string name="app_name" translatable="false">Real Estate Manager</string>

    <!--Navigation View and Bottom Navigation View Strings-->
    <string name="real_estate">All Properties</string>
    <string name="add_real_estate">Add real estate</string>
    <string name="create_property">Create Property</string>
    <string name="create">&#160;&#160;CREATE&#160;&#160;</string>
    <string name="update">&#160;&#160;UPDATE&#160;&#160;</string>
    <string name="map">Real estate Map</string>
    <string name="list">Real estate List</string>
    <string name="detail">Real estate Detail</string>
    <string name="search">&#160;&#160;SEARCH&#160;&#160;</string>
    <string name="edit">&#160;&#160;Edit&#160;&#160;</string>
    <string name="button_list_title">List</string>
    <string name="button_map_title">Map</string>
    <string name="no_property_to_display">No Property to Display</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="none">none</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="surface">Surface</string>
    <string name="description">Description</string>
    <string name="media">Media</string>
    <string name="location">Location</string>
    <string name="property_type">Type of property</string>
    <string name="property_price">Price</string>
    <string name="property_entry_date">Entry Date</string>
    <string name="property_sold_date">Sold Date</string>
    <string name="euros_symbol" translatable="false">€</string>
    <string name="dollars_symbol" translatable="false">$</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="square_meter" translatable="false">m²</string>
    <string name="interest_points">Interest Points</string>
    <string name="label_map">Map</string>
    <string name="content_description">Content Description</string>
    <string name="property_status">Status</string>
    <string name="no_sold_date">no sold date</string>
    <string name="choose_property_type">CHOOSE TYPE OF PROPERTY</string>
    <string name="choose_property_status">CHOOSE A STATUS FOR PROPERTY</string>

    <string name="property_type_flat">Flat</string>
    <string name="property_type_townhouse">Townhouse</string>
    <string name="property_type_penthouse">Penthouse</string>
    <string name="property_type_house">House</string>
    <string name="property_type_duplex">Duplex</string>
    <string name="property_type_none">None</string>

    <string name="property_status_sold">Sold</string>
    <string name="property_status_for_rent">For Rent</string>
    <string name="property_status_in_sale">In Sale</string>
    <string name="property_status_none">None</string>

    <string name="interest_point_school">School</string>
    <string name="interest_point_playground">Playground</string>
    <string name="interest_point_shop">Shop</string>
    <string name="interest_point_buses">Buses</string>
    <string name="interest_point_subway">Subway</string>
    <string name="interest_point_park">Park</string>
    <string name="interest_point_hospital">Hospital</string>
    <string name="interest_point_restaurants">Restaurant</string>
    <string name="interest_point_gas_stations">Gas Station</string>
    <string name="interest_point_none">None</string>

    <string name="photo_type_main">main</string>
    <string name="photo_type_bathroom">bathroom</string>
    <string name="photo_type_bedroom">bedroom</string>
    <string name="photo_type_facade">facade</string>
    <string name="photo_type_kitchen">kitchen</string>
    <string name="photo_type_lounge">lounge</string>
    <string name="photo_type_none">none</string>

    <string name="property_update_locally">The changes have been saved on phone and will be saved remotely once the connection wil be reestablished</string>
    <string name="property_update_totally">The changes have been saved fully</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="change_property_type">CHANGE TYPE</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="no">NO</string>
    <string name="change_property_status">CHANGE STATUS</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="change_photo">Change photo</string>
    <string name="update_photo_detail">UPDATE PHOTO</string>
    <string name="delete_photo">DELETE PHOTO</string>
    <string name="confirm_save_changes_dialog_title">UPDATE PROPERTY</string>
    <string name="confirm_save_changes_dialog_message">You made changes.Would you like to save them?</string>
    <string name="confirm_save_changes">CONFIRM CHANGES</string>
    <string name="confirm_create_changes_dialog_title">CREATE PROPERTY</string>
    <string name="confirm_create_changes_dialog_message">You have started to create a property. Would you like to save it?</string>
    <string name="confirm_create_changes">CONFIRM CREATION</string>
    <string name="is_main_photo_question">is the main photo?</string>
    <string name="cannot_delete_photo">You cannot delete this photo because it is the main one</string>
    <string name="no_photos_for_this_property">No Photos For this Property</string>
    <string name="no_changes">No changes have been made</string>
    <string name="property_create_locally">The property have been created on phone and will be saved remotely once the connection wil be reestablished</string>
    <string name="property_create_totally">The changes have been created fully</string>

    <string name="no_property_type_found">No Property Type Found</string>
    <string name="no_address_found">No Address Found</string>

    <!-- Notifications -->
    <string name="notification_title">Properties Created</string>
    <string name="notification_channel_properties_name">Properties</string>
    <string name="notification_channel_properties_description">Information about properties</string>
    <string name="notification_channel_app_name">Application</string>
    <string name="notification_channel_app_description">General app updates</string>
    <string name="notification_action_all_properties">All properties</string>
    <string name="result_search_properties">Result Search Properties</string>
    <string name="search_properties">Search Properties</string>
    <string name="nearby">Nearby</string>
    <string name="property_min_price">Minimum Price</string>
    <string name="property_max_price">Maximum Price</string>
    <string name="min_surface">Minimum Surface</string>
    <string name="max_surface">Maximum Surface</string>
    <string name="min_rooms">Minimum Rooms</string>
    <string name="max_rooms">Maximum Rooms</string>
    <string name="all_property_type">All Type</string>
    <string name="all_property_status">All Status</string>
    <string name="no_property_found">No Property Found</string>
    <string name="currency">Currency</string>
    <string name="default_currency">Default Currency</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="settings">Settings</string>
    <string name="update_location">Update Location</string>
    <string name="search_location_hint">Search by address, street, city, postal code or country</string>
    <string name="search_result">Search Results</string>
</resources>
